--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase": "^3.6.4",
     "vue": "^2.1.0",
+    "vue-router": "^2.7.0",
     "vuefire": "^1.3.0"
   },
   "devDependencies": {
